creacion genero adivina

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,26 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Adivina Genero!
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <ion-card>
+    <ion-card-header>
+      Ingresa la curp
+    </ion-card-header>
+    <ion-card-content>
+      <ion-item>
+        <ion-input type="text" placeholder="CURP" [(ngModel)]="dataCurp.cadena"></ion-input>
+      </ion-item>
+      <ion-item>
+        <button button ion-button [navPush]="generoReferencia" [navParams]="genero" 
+        (click)="adivinador()"> Adivinar!</button>
+      </ion-item>
+
+    </ion-card-content>
+  </ion-card>
+
 </ion-content>
